--- a/index.html
+++ b/index.html
@@ -1,21 +1,75 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Assignment 1</title>
-		<meta charset="UTF-8">
-		<!--Bootstrap CSS-->
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-		<!--TODO: create and include your own CSS -->
+	<head lang="en">
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- ensures proper Bootstrap rendering -->
+	    <title>Skye Moret: Assignment 1</title>
+	    <!-- create a new stylesheet -->
+	    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	    <link href="style.css" rel="stylesheet" />
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div class="header">
-			<h1>Assignment 1: Data Dashboard Mockup</h1>
-		</div>
-		<div class="controls">
-			<!-- TODO: add bootstrap UI widgets here -->
-		</div>
-		<div class="canvas">
-			<!-- TODO: leave this empty for now, but apply a background color -->
+		<div class="wholebody" class="container-fluid">
+			<h1>Creating a basic page structure!</h1>
+			<!-- create navigation bar-->
+			<nav role="navigation" class="nav-bar">
+				<ul>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Projects</a></li>
+	    			<li><a href="#">Contact</a></li>
+	    		</ul>
+	    	</nav>
+	    	<!-- create control panel -->
+	    	<div class="nonheader" class="row">
+		    	<div class="col-md-3" class="controls" >
+		    		<h2>Controls live here</h2>
+		    		<p>Description of controls...</p>
+		    		<br>
+		    		<br>
+		    		<!-- new Bootstrap Ix items -->
+		    		<!-- First button goes here -->
+		    		<button type="button" class="btn btn-danger btn-lg btn-block"> <span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Push this Button <span class="glyphicon glyphicon-flash" aria-hidden="true"></span></button>
+			    	<br>
+			    	<!-- Dropdown Menu goes here -->
+			    	<div class="dropdown">
+					  	<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">Dropdown Menu here<span class="caret"></span>
+					  	</button>
+					  	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuDivider">
+					    	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">First item</a></li>
+					   		<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Second item</a></li>
+						    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Third item</a></li>
+						    <li role="presentation" class="divider">Final item</a></li>
+					  	</ul>
+					</div>
+					<br>
+					<!-- Button group goes here -->
+					<div class="btn-group btn-group-lg" role="group" aria-label="...">
+					  	<button type="button" class="btn btn-default">Left</button>
+					  	<button type="button" class="btn btn-default">Middle</button>
+					  	<button type="button" class="btn btn-default">Right</button>
+					</div>
+					<br>
+					<br>
+					<!-- Form group goes here -->
+					<form class="form-inline">
+					 	<div class="form-group">
+					   		<label for="exampleInputName2">Name</label>
+					    	<input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+					  	</div>
+					  	<div class="form-group">
+						    <label for="exampleInputEmail2">Email</label>
+						    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+					 	</div>
+					</form>
+		    	</div>
+		    	<!-- create visualization canvas -->
+		    	<div class="col-md-5" class="canvas">
+		    		<h2>Interactive visualization lives here</h2>
+		    		<img src="http://www.cleverfranke.com/uploads/images/photos/medium/weather-chart-6.jpg" alt="visualization goes here" style="width:800px" />
+		    	</div>
+	    	</div>
 		</div>
 	</body>
 </html>
